--- a/themes/fancy/styles/_variables.scss
+++ b/themes/fancy/styles/_variables.scss
@@ -45,15 +45,15 @@
   --z-controls: 220;
 
   // Button sizes
-  --btn-height-sm: 42px;
-  --btn-height-md: 54px;
-  --btn-height-lg: 72px;
-  --btn-padding-sm: 0 12px;
-  --btn-padding-md: 0 18px;
-  --btn-padding-lg: 0 21px;
-  --btn-font-sm: 1rem;
-  --btn-font-md: 1.3125rem;
-  --btn-font-lg: 1.5rem;
+  --btn-height-sm: 32px;
+  --btn-height-md: 36px;
+  --btn-height-lg: 48px;
+  --btn-padding-sm: 0 8px;
+  --btn-padding-md: 0 12px;
+  --btn-padding-lg: 0 14px;
+  --btn-font-sm: 0.8125rem;
+  --btn-font-md: 0.875rem;
+  --btn-font-lg: 1rem;
 }
 
 // Light theme colors
